# repo-template

./: CHANGELOG.md  Cargo.toml  LICENSE.MIT  LICENSE.ZLIB  README.md  README.tpl  cargo-generate.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build.yml  changelog.yml
examples/: Cargo.toml
{{project-name}}/: Cargo.toml
