[workspace]
members = [
    "examples",
]
resolver = "2"

[package]
name = "{{project-name}}"
version = "0.1.0"
authors = ["{{authors}}"]
edition = "2018"
description = ".."
readme = "README.md"
repository = "https://github.com/{{github_org}}/{{project-name}}"
license = "MIT OR Apache-2.0 OR Zlib"
keywords = []
categories = []

{% raw %}
[package.metadata.release]
pre-release-hook = ["cargo", "readme", "-o", "README.md", "-t", "README.tpl"]
[[package.metadata.release.pre-release-replacements]]
file = "../CHANGELOG.md"
search = "\\[Unreleased\\]\\(#unreleased\\)"
replace = "[Unreleased](#unreleased)\n- [v{{version}}](#v{{version}})"
[[package.metadata.release.pre-release-replacements]]
file = "../CHANGELOG.md"
search = "\\[v([0-9+])\\.([0-9+])\\.([0-9+])\\]\\(#v[0-9\\.]+\\)"
replace = "[v$1.$2.$3](#v$1$2$3)"
[[package.metadata.release.pre-release-replacements]]
file = "../CHANGELOG.md"
search = "## Unreleased"
replace = "## Unreleased\n\n## v{{version}}\n\nReleased {{date}}"
[[package.metadata.release.pre-release-replacements]]
file = "../CHANGELOG.md"
search = "\\[Unreleased\\]\\(https://github.com/{{github_org}}/rend3/compare/v([a-z0-9.-]+)\\.\\.\\.HEAD\\)"
replace = "[Unreleased](https://github.com/{{github_org}}/rend3/compare/v{{version}}...HEAD)\n- [v{{version}}](https://github.com/{% endraw %}{{github_org}}{% raw %}/rend3/compare/v$1...v{{version}})"

[profile.release]
lto = "thin"
{%- endraw -%}
