[package]
name = "{{project-name}}-examples"
version = "0.1.0"
authors = ["{{authors}}"]
edition = "2018"
description = ".."
readme = "README.md"
repository = "https://github.com/BVE-Reborn/crate-name"
license = "MIT OR Apache-2.0 OR Zlib"
keywords = []
categories = []
publish = false

[dependencies]
{{project-name}} = { path = "../{{ project-name }}" }
